--- a/config.env
+++ b/config.env
@@ -1,15 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# RECOMMNED SETUP 
-## Setup only Required Config & DATABASE_URL
-## Rest of variable can be setup using BOT by /bsetting command
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5875855662:AAG7V7KAxD9585avExyVqFITthmwVHqO3DI"
+OWNER_ID = "5877195958"
+TELEGRAM_API = "22524363"
+TELEGRAM_HASH = "96e150cdf7b9f5c4d960add8be4debb3"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
@@ -17,7 +10,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://salomiyadb:salomiyadb@salomiyadb.ykcnwrn.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
